задание выполнено не успел допилить генерацию формы и привести код в приемлемый вид, но уже нет времени

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -25,15 +25,8 @@
 </head>
 
 <body>
-<h1> my page</h1>
-<label for="">Name: <input type="text" id="username" name="username"></label><br>
-<label for="">Password: <input type="text" id="password"></label><br>
-<label for="">Email: <input type="text" id="email"></label><br>
-<label for="">Gender: <input type="text" id="gender"></label><br>
-<label for="">Credit_card: <input type="text" id="credit_card"></label><br>
-<label for="">Bio: <input type="text" id="bio"></label><br>
-<label for="">Birth: <input type="text" id="birth"></label><br>
-<input type="submit" id="send">
+
+<script src="js/FormConstructr.js"></script>
 <script src="js/common.js"></script>	
 </body>
 </html>
