--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -22,11 +22,57 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script src="js/jquery-ui/jquery-ui.js"></script>
+	<link rel="stylesheet" href="js/jquery-ui/jquery-ui.css">
 </head>
 
 <body>
+<form action="" id="my_form">
+	<div class="form-group label-floating">
+		<input type="text" class="form-area" name="username" id="username">
+		<label for="username" class="control-label">Имя</label>
+		<i class="done">&#xf122;</i>
+		<i class="fail">&#xf12a;</i>
+	</div>
+	<div class="form-group label-floating">
+		<input type="text" class="form-area" name="email" id="email">
+		<label for="email" class="control-label">Email</label>
+		<i class="done">&#xf122;</i>
+		<i class="fail">&#xf12a;</i>
+	</div>
+	<div class="form-group label-floating">
+		<input type="text" class="form-area" name="password" id="password">
+		<label for="password" class="control-label">Password</label>
+		<div id="progressbar"><div class="progress-label">короткий</div></div>
+		<i class="done">&#xf122;</i>
+		<i class="fail">&#xf12a;</i>
+	</div>
+	<div class="form-group label-floating">
+		<input type="text" class="form-area" name="birth" id="birth">
+		<label for="birth" class="control-label">Birth</label>
+		<i class="done">&#xf122;</i>
+		<i class="fail">&#xf12a;</i>
+	</div>
+	<div class="form-group label-floating">
+		<input type="text" class="form-area" name="gender" id="gender">
+		<label for="gender" class="control-label">Gender</label>
+		<i class="done">&#xf122;</i>
+		<i class="fail">&#xf12a;</i>
+	</div>
+	<div class="form-group label-floating">
+		<input type="text" class="form-area" name="passport" id="passport">
+		<label for="passport" class="control-label">passport</label>
+		<i class="done">&#xf122;</i>
+		<i class="fail">&#xf12a;</i>
+	</div>
+	<input type="submit" id="send">
+	</form>
+	<div id="dialogWin" title="Success">
+		Данные успешно отправленны
+	</div>
+<script src="js/common_jq.js"></script>
 
-<script src="js/FormConstructr.js"></script>
-<script src="js/common.js"></script>	
 </body>
 </html>
